--- a/Forkify-Fullstack-Project/package.json
+++ b/Forkify-Fullstack-Project/package.json
@@ -2,7 +2,6 @@
   "name": "forkify",
   "version": "1.0.0",
   "description": "Recipe application",
-  "default": "index.html",
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html --dist-dir ./dist"
@@ -10,10 +9,12 @@
   "author": "Ar Toqi",
   "license": "ISC",
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.15.4",
-    "parcel": "^2.15.4"
+    "@parcel/transformer-sass": "^2.16.0",
+    "parcel": "^2.16.0"
   },
   "dependencies": {
+    "core-js": "^3.45.1",
+    "regenerator-runtime": "^0.14.1",
     "sass": "^1.92.1"
   }
 }
